--- a/startpage.html
+++ b/startpage.html
@@ -190,8 +190,8 @@
 
 
 
-<!-- Bottom Empty Section  -->
-  <!-- Bottom Empty Header  -->
+<!-- Video Section  -->
+  <!-- Video Header  -->
   <div id= "video">
   <div class="container">
     <div class="section">
@@ -199,12 +199,11 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4 class="header center white-text text-lighten-2">Environmental Awareness Videos</h4>
-          <!-- <p class="header col s12 light">New Info</p> -->
         </div>
       </div>
     </div>
   </div>
-  <!-- Bottom Empty Body  -->
+  <!-- Video Body  -->
   <div class="parallax-container valign-wrapper">
   <!-- <div class="section no-pad-bot">
     <div class="container">
@@ -237,12 +236,58 @@
   <div class="parallax"><img src="background-turtle1.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
+<!-- Picture Section -->
+      <div class="row">
+
+        <h4 class="header center white-text text-lighten-2">Meet the Team</h4>
+
+        <!-- Catherine -->
+        <div class="col s12 m4">
+          <div class="center"><img id="Portait1" src="portrait1.jpg" width="100"></div>
+            <h5 class="center">Catherine Atalig</h5>
+            <p class="light">Catherines blub.</p>
+          </div>
+
+        <!-- Katriona -->
+        <div class="col s12 m4">
+          <div class="center"><img id="Portait2" src="portrait2.jpg" width="100"></div>
+            <h5 class="center">Katriona Durkin</h5>
+            <h6 class="light">Katrionas blub.</h6>
+          </div>
+
+        <!-- Jessica -->
+        <div class="col s12 m4">
+          <div class="center"><img id="Portait3" src="portrait3.jpg" width="100"></div>
+            <h5 class="center">Jessica Kukin</h5>
+            <p class="light">Jessicas blub.</p>
+          </div>
+        </div>
+        </div>
+        </div>
+    
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 <!-- Footer Section -->
   <!-- Footer Top -->
-  <footer background="underwater.jpg">
+  <footer class="underwater.jpg">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -251,9 +296,7 @@
         </div>
         <!-- Footer Middle Empty -->
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
           <ul>
-
           </ul>
         </div>
         <!-- Footer Emails -->
@@ -264,20 +307,18 @@
             <li><a class="black-text" href="#!">catherineatalignyc@gmail.com</a></li>
             <li><a class="black-text" href="#!">jessicakukin@gmail.com</a></li>
             </br></br>
-            <img src="laguardia.jpg"alt="me"style="width:100px;height:70px">
+
           </ul>
         </div>
       </div>
     </div>
     <!-- Footer Bottom -->
-    <div class="footer-copyright">
+    <!-- <div class="footer-copyright">
       <div class="container">
       Built by <a class="black-text text-lighten-3" href="http://materializecss.com">Girls</a>
       </div>
-    </div>
+    </div> -->
   </footer>
-
-
 
 
 
