--- a/startpage.html
+++ b/startpage.html
@@ -243,28 +243,28 @@
 
         <!-- Catherine -->
         <div class="col s12 m4">
-          <div class="center"><img id="Portait1" src="portrait1.jpg" width="100"></div>
+          <div class="center"><img id="Portait1" src="catherine.jpg" width="100"></div>
             <h5 class="center">Catherine Atalig</h5>
             <p class="light">Catherines blub.</p>
           </div>
 
         <!-- Katriona -->
         <div class="col s12 m4">
-          <div class="center"><img id="Portait2" src="portrait2.jpg" width="100"></div>
+          <div class="center"><img id="Portait2" src="katriona.jpg" width="100"></div>
             <h5 class="center">Katriona Durkin</h5>
             <h6 class="light">Katrionas blub.</h6>
           </div>
 
         <!-- Jessica -->
         <div class="col s12 m4">
-          <div class="center"><img id="Portait3" src="portrait3.jpg" width="100"></div>
+          <div class="center"><img id="Portait3" src="jessica.jpg" width="100"></div>
             <h5 class="center">Jessica Kukin</h5>
             <p class="light">Jessicas blub.</p>
           </div>
         </div>
         </div>
         </div>
-    
+
       </div>
 
 
