--- a/animal_game.html
+++ b/animal_game.html
@@ -3,7 +3,9 @@
 <head>
 <style>
 body {
-  background-color: #ffff66;
+
+
+  /*background-color:#ffff66;*/
 }
 </style>
   <title>HABITACK</title>
@@ -53,7 +55,7 @@ body {
 </style>
 </head>
 <body onload="startGame()">
-
+  <body background="background-game.jpg">
 
 <script>
 
