--- a/animal_game.html
+++ b/animal_game.html
@@ -3,7 +3,9 @@
 <head>
 <style>
 body {
-  background-color: #ffff66;
+  background-image: url("wave.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 </style>
   <title>HABITACK</title>
@@ -53,6 +55,8 @@ body {
 </style>
 </head>
 <body onload="startGame()">
+
+  <!-- <body background= "bub.jpg"> -->
 
 
 <script>
