--- a/startpage.html
+++ b/startpage.html
@@ -73,7 +73,7 @@
             <a href=#help>
             <h2 class="center white-text"><i class="material-icons">attach_money</i></h2></a>
             <h5 class="center">Donate</h5>
-            <p class="light">Donate to World Wildlife Foundation to help save to turles.</p>
+            <p class="light">Donate to World Wildlife Foundation to help save the turles.</p>
           </div>
         </div>
 
@@ -245,21 +245,21 @@
         <div class="col s12 m4">
           <div class="center"><img id="Portait1" src="catherine.jpg" width="100"></div>
             <h5 class="center">Catherine Atalig</h5>
-            <p class="light">Catherines blub.</p>
+            <p class="light">Catherine is a junior an Laguardia High School majoring in fine arts.Ouside of school, she enjoys studying astronomy, running, and painting.</p>
           </div>
 
         <!-- Katriona -->
         <div class="col s12 m4">
           <div class="center"><img id="Portait2" src="katriona.jpg" width="100"></div>
             <h5 class="center">Katriona Durkin</h5>
-            <h6 class="light">Katrionas blub.</h6>
+            <p class="light">Katriona is a senior at Massapequa High School. Outside of coding, she likes to play soccer and tennis. In her free time she like's to explore NYC and read novels.</p>
           </div>
 
         <!-- Jessica -->
         <div class="col s12 m4">
           <div class="center"><img id="Portait3" src="jessica.jpg" width="100"></div>
             <h5 class="center">Jessica Kukin</h5>
-            <p class="light">Jessicas blub.</p>
+            <p class="light">Jessica is a junior at Tottenville High School. Other than coding, she enjoys reading, playing the clarinet, and handball..</p>
           </div>
         </div>
         </div>
@@ -287,7 +287,7 @@
 
 <!-- Footer Section -->
   <!-- Footer Top -->
-  <footer class="underwater.jpg">
+  <footer class="white">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
